фиксит логотипы в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title visually-hidden">Отзывы</h2>
           <svg class="reviews__quotes-item" width="79" height="63">
-            <use xlink:href="#quotes"></use>
+            <use xlink:href="#icon-quotes"></use>
           </svg>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
@@ -154,7 +154,7 @@
           <button class="reviews__prev-button" type="button">
             <span class="visually-hidden">Предыдущий отзыв</span>
             <svg width="22" height="41">
-              <use xlink:href="#arrow-left"></use>
+              <use xlink:href="#icon-review-arrow-left"></use>
             </svg>
           </button>
           <div class="reviews__toggles-list">
@@ -165,7 +165,7 @@
           <button class="reviews__next-button" type="button">
             <span class="visually-hidden">Следующий отзыв</span>
             <svg width="22" height="41">
-              <use xlink:href="#arrow-right"></use>
+              <use xlink:href="#icon-review-arrow-right"></use>
             </svg>
           </button>
         </div>
@@ -291,7 +291,7 @@
 
     <footer class="page-footer page-footer--index">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo-link" href="index.html">
+        <a class="page-footer__logo-link">
           <svg class="page-footer__logo-image" width="147" height="41">
             <use xlink:href="#logo-pink-blue"></use>
           </svg>
