--- a/source/photo.html
+++ b/source/photo.html
@@ -14,7 +14,7 @@
   <header class="page-header">
       <div class="page-header__wrapper page-header__wrapper--menu-opened page-header__wrapper--nojs">
         <div class="page-header__logo-toggle-wrapper">
-          <a class="page-header__logo-link">
+          <a class="page-header__logo-link" href="index.html">
             <svg class="page-header__logo-image">
               <use xlink:href="#logo-pink-white"></use>
             </svg>
