делает фиксы для критерия Б31

--- a/source/form.html
+++ b/source/form.html
@@ -113,7 +113,7 @@
               <legend class="form__legend form__legend--contacts">Контактная информация</legend>
               <label class="form__label form__label--contacts form__label--phone">
                 <span class="form__label-value form__label-value--contacts">Номер телефона</span>
-                <input class="form__input form__input--contacts" type="tel" name="user-phone-number" placeholder="Номер, пожалуйста" pattern="[^a-zA-zа-яёА-ЯЁ]">
+                <input class="form__input form__input--contacts" type="tel" name="user-phone-number" placeholder="Номер, пожалуйста" pattern="[^a-zA-zа-яёА-ЯЁ]{1,}">
               </label>
               <label class="form__label form__label--contacts form__label--mail">
                 <span class="form__label-value form__label-value--contacts">Адрес почты</span>
