--- a/source/index.html
+++ b/source/index.html
@@ -108,12 +108,14 @@
             </li>
             <li class="features__item">
               <picture class="features__picture">
+                <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source type="image/webp" media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.webp 1x, img/iphone-screen-3-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 660px)" srcset="img/iphone-screen-3-tablet@1x.webp 1x, img/iphone-screen-3-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/iphone-screen-mobile@1x.webp 1x, img/iphone-screen-mobile@2x.webp 2x">
 
                 <source media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.png 1x, img/iphone-screen-3-desktop@2x.png 2x">
                 <source media="(min-width: 660px)" srcset="img/iphone-screen-3-tablet@1x.png 1x, img/iphone-screen-3-tablet@2x.png 2x">
+                <!--[if IE 9]></video><![endif]-->
                 <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" width="157" height="320" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне">
               </picture>
               <h3 class="features__title">Заводит новых друзей</h3>
@@ -334,5 +336,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/picturefill.js" async></script>
   </body>
 </html>
