--- a/source/form.html
+++ b/source/form.html
@@ -15,25 +15,25 @@
       <div class="page-header__wrapper page-header__wrapper--menu-opened page-header__wrapper--nojs">
         <div class="page-header__logo-toggle-wrapper">
           <a class="page-header__logo-link" href="index.html">
-            <svg class="page-header__logo-image">
+            <svg class="page-header__logo-image" tabindex="0">
               <use xlink:href="#logo-pink-white"></use>
             </svg>
           </a>
-          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="page-header__toggle" type="button" tabindex="0"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <nav class="page-header__main-nav main-nav ">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="site-list__link" href="index.html">Главная</a>
+              <a class="site-list__link" href="index.html" tabindex="0">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="photo.html">Фотографии</a>
+              <a class="site-list__link" href="photo.html" tabindex="0">Фотографии</a>
             </li>
             <li class="site-list__item site-list__item--active">
               <a class="site-list__link">Конкурс</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive" tabindex="0">HTML Academy</a>
             </li>
           </ul>
         </nav>
@@ -72,37 +72,37 @@
               <ul class="form__list form__list--achievements list">
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="selfie-with-a-shark" type="checkbox" name="selfie-with-a-shark" checked="">
-                  <label class="form__label form__label--checkbox" for="selfie-with-a-shark">
+                  <label class="form__label form__label--checkbox" for="selfie-with-a-shark" tabindex="0">
                     Сделал селфи с акулой
                   </label>
                 </li>
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="sunburned-on-the-beach" type="checkbox" name="sunburned-on-the-beach" checked="">
-                  <label class="form__label form__label--checkbox" for="sunburned-on-the-beach">
+                  <label class="form__label form__label--checkbox" for="sunburned-on-the-beach" tabindex="0">
                     Обгорел на пляже
                   </label>
                 </li>
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="saw-chuck-norris" type="checkbox" name="saw-chuck-norris">
-                  <label class="form__label form__label--checkbox" for="saw-chuck-norris">
+                  <label class="form__label form__label--checkbox" for="saw-chuck-norris" tabindex="0">
                     Видел Чака Норриса
                   </label>
                 </li>
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="bought-souvenirs" type="checkbox" name="bought-souvenirs">
-                  <label class="form__label form__label--checkbox" for="bought-souvenirs">
+                  <label class="form__label form__label--checkbox" for="bought-souvenirs" tabindex="0">
                     Накупил сувениров
                   </label>
                 </li>
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="held-the-tower" type="checkbox" name="held-the-tower" checked="">
-                  <label class="form__label form__label--checkbox" for="held-the-tower">
+                  <label class="form__label form__label--checkbox" for="held-the-tower" tabindex="0">
                     Удержал башню
                   </label>
                 </li>
                 <li class="form__item form__item--achievements">
                   <input class="form__input form__input--achievements" id="defeated-the-hotel" type="checkbox" name="defeated-the-hotel">
-                  <label class="form__label form__label--checkbox" for="defeated-the-hotel">
+                  <label class="form__label form__label--checkbox" for="defeated-the-hotel" tabindex="0">
                     Разгромил отель
                   </label>
                 </li>
@@ -128,19 +128,19 @@
                 <ul class="form__list form__list--platform list">
                   <li class="form__item form__item--radio">
                     <input class="form__input form__input--platform" id="mobile-platform--ios" type="radio" name="mobile-platform" checked="">
-                    <label class="form__label form__label--radio" for="mobile-platform--ios">
+                    <label class="form__label form__label--radio" for="mobile-platform--ios" tabindex="0">
                       Pink для iOS
                     </label>
                   </li>
                   <li class="form__item form__item--radio">
                     <input class="form__input form__input--platform" id="mobile-platform--android" type="radio" name="mobile-platform">
-                    <label class="form__label form__label--radio" for="mobile-platform--android">
+                    <label class="form__label form__label--radio" for="mobile-platform--android" tabindex="0">
                       Pink на Android
                     </label>
                   </li>
                   <li class="form__item form__item--radio">
                     <input class="form__input form__input--platform" id="mobile-platform--windows-phone" type="radio" name="mobile-platform">
-                    <label class="form__label form__label--radio" for="mobile-platform--windows-phone">
+                    <label class="form__label form__label--radio" for="mobile-platform--windows-phone" tabindex="0">
                       Windows Phone
                     </label>
                   </li>
@@ -154,7 +154,7 @@
               </label>
             </fieldset>
             <div class="form__button-designation-wrapper">
-              <button class="form__button button button--green" type="submit">Отправить форму</button>
+              <button class="form__button button button--green" type="submit" tabindex="0">Отправить форму</button>
               <small class="form__designation">
               <span class="form__asterisk">*</span> — обязательные <span class="form__asterisk-added">для заполнения</span> поля
             </small>
@@ -167,7 +167,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo-link" href="index.html">
-          <svg class="page-footer__logo-image" width="147" height="41">
+          <svg class="page-footer__logo-image" width="147" height="41" tabindex="0">
             <use xlink:href="#logo-pink-blue"></use>
           </svg>
         </a>
@@ -175,7 +175,7 @@
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
               <p class="visually-hidden">Мы в Твиттере</p>
-              <svg class="page-footer__img page-footer__img--twitter" width="18" height="15">
+              <svg class="page-footer__img page-footer__img--twitter" width="18" height="15" tabindex="0">
                 <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
@@ -183,7 +183,7 @@
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--facebook" href="https://www.facebook.com/htmlacademy">
               <p class="visually-hidden">Мы на Фейсбуке</p>
-              <svg class="page-footer__img page-footer__img--facebook" width="9" height="19">
+              <svg class="page-footer__img page-footer__img--facebook" width="9" height="19" tabindex="0">
                 <use xlink:href="#icon-facebook"></use>
               </svg>
             </a>
@@ -191,7 +191,7 @@
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">
               <p class="visually-hidden">Мы на Ютубе</p>
-              <svg class="page-footer__img page-footer__img--youtube" width="15" height="14">
+              <svg class="page-footer__img page-footer__img--youtube" width="15" height="14" tabindex="0">
                 <use xlink:href="#icon-youtube"></use>
               </svg>
             </a>
@@ -200,7 +200,7 @@
         <div class="page-footer__copyright copyright">
           <a class="copyright__html-academy-link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__made-by">Разработано <span class="visually-hidden">HTML Academy</span></span>
-            <svg class="copyright__html-academy-logo" width="27" height="34">
+            <svg class="copyright__html-academy-logo" width="27" height="34" tabindex="0">
               <use xlink:href="#logo-htmlacademy"></use>
             </svg>
           </a>
@@ -211,13 +211,13 @@
     <section class="modal modal--error">
       <h2 class="modal__title">Что-то пошло не так!</h2>
       <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="modal__button button button--green" type="button">Ок</button>
+      <button class="modal__button button button--green" type="button" tabindex="0">Ок</button>
     </section>
 
     <section class="modal modal--success">
       <h2 class="modal__title">Ваша заявка отправлена</h2>
       <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button class="modal__button button button--green" type="button">Закрыть окно</button>
+      <button class="modal__button button button--green" type="button" tabindex="0">Закрыть окно</button>
     </section>
 
     <script src="js/main.js"></script>
