--- a/source/photo.html
+++ b/source/photo.html
@@ -68,7 +68,7 @@
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Анна <span class="post-content__posting-time">(5 минут назад)</span></p>
-                  <p class="post-content__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+                  <p class="post-content__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои <span class="post-content__mobile-hidden">вопросы!</span></p>
                   <svg class="post-content__likes-icon" width="13" height="12">
                     <use xlink:href="#icon-heart"></use>
                   </svg>
@@ -250,15 +250,17 @@
                       <use xlink:href="#icon-editor-crop"></use>
                     </svg>
                   </label>
-                  <label><input class="editing__range editing__range--crop" min="0" max="100" value="77" name="crop-value" type="range"></label>
+<!--                  <label><input class="editing__range editing__range&#45;&#45;crop" min="0" max="100" value="77" name="crop-value" type="range"></label>-->
+                  <div class="editing__range-line editing__range-line--crop"></div>
                 </li>
                 <li class="editing__element">
                   <label class="editing__label" for="editing-fill">
-                    <svg class="editing__icon editing__icon--fill" width="48" height="43">
+                    <svg class="editing__icon editing__icon--fill" width="48" height="48">
                       <use xlink:href="#icon-editor-fill"></use>
                     </svg>
                   </label>
-                  <label><input class="editing__range editing__range--fill" min="0" max="100" value="10" name="fill-value" type="range"></label>
+<!--                  <label><input class="editing__range editing__range&#45;&#45;fill" min="0" max="100" value="10" name="fill-value" type="range"></label>-->
+                  <div class="editing__range-line editing__range-line--fill"></div>
                 </li>
                 <li class="editing__element">
                   <label class="editing__label" for="editing-contrast">
@@ -266,7 +268,8 @@
                       <use xlink:href="#icon-editor-contrast"></use>
                     </svg>
                   </label>
-                  <label><input class="editing__range editing__range--contrast" min="0" max="100" value="50" name="contrast-value" type="range"></label>
+<!--                  <label><input class="editing__range editing__range&#45;&#45;contrast" min="0" max="100" value="50" name="contrast-value" type="range"></label>-->
+                  <div class="editing__range-line editing__range-line--contrast"></div>
                 </li>
               </ul>
               <div class="editing__buttons-wrapper">
