--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,6 @@
     <link rel="preload" href="fonts/opensans.woff2" as="font">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font">
-    <link rel="preload" href="fonts/opensans.woff" as="font">
-    <link rel="preload" href="fonts/opensansbold.woff" as="font">
-    <link rel="preload" href="fonts/opensanslight.woff" as="font">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
@@ -135,9 +132,9 @@
         <div class="research__wrapper">
           <h2 class="visually-hidden">Исследование</h2>
           <div class="research__content">
-            <p class="research__slogan">Эффект <br class="research__tablet-br"> на 24 часа!</p>
-            <p class="research__text">Британские ученые провели исследования и доказали,<br class="research__desktop-br">
-              что положительный эффект<br class="research__tablet-br"> от использования приложения длится целые сутки!</p>
+            <p class="research__slogan">Эффект&nbsp;<br class="research__tablet-br">на 24 часа!</p>
+            <p class="research__text">Британские ученые провели исследования и доказали,&nbsp;<br class="research__desktop-br">
+              что положительный эффект&nbsp;<br class="research__tablet-br"> от использования приложения длится целые сутки!</p>
             <a href="#" class="research__link">Узнать больше об исследовании</a>
           </div>
         </div>
