фиксит иконки формы для критерия Д15

--- a/source/form.html
+++ b/source/form.html
@@ -118,10 +118,16 @@
               <label class="form__label form__label--contacts form__label--phone">
                 <span class="form__label-value form__label-value--contacts">Номер телефона</span>
                 <input class="form__input form__input--contacts" type="tel" name="user-phone-number" placeholder="Номер, пожалуйста" pattern="[^a-zA-zа-яёА-ЯЁ]{1,}">
+                <svg class="form__label-icon" width="20" height="19">
+                  <use xlink:href="#icon-phone"></use>
+                </svg>
               </label>
               <label class="form__label form__label--contacts form__label--mail">
                 <span class="form__label-value form__label-value--contacts">Адрес почты</span>
                 <input class="form__input form__input--contacts" type="email" name="user-email" placeholder="Введите почту *" required="">
+                <svg class="form__label-icon" width="18" height="13">
+                  <use xlink:href="#icon-mail"></use>
+                </svg>
               </label>
               </div>
             </fieldset>
