--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
 
     <main class="page-main">
 
-      <section class="page-main__intro intro">
+      <section class="page-main__intro intro intro--index-page">
         <div class="intro__wrapper intro__wrapper--index-page">
           <h1 class="intro__page-title visually-hidden">Пинк</h1>
 
